# CUDA-CenterPoint-People

./: .gitignore
CUDA-CenterPoint/: CMakeLists.txt
CUDA-CenterPoint/include/: centerpoint.h  common.h
CUDA-CenterPoint/src/: centerpoint.cpp  tensorrt.cpp
CUDA-CenterPoint/tool/: build.trt.sh
